--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:16
-    container_name: postgres
+    container_name: postgres-exemplar
     restart: unless-stopped
     environment:
       POSTGRES_DB: mydb
